--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
       <p>I am all yours</p>
 
       <div class="btn">
-        <a href='/yes.html'>Yes</a>
-        <a href='/no1.html'>No</a>
+        <a href="yes.html">Yes</a>
+        <a href="no1.html">
       </div>
     </div>
   </body>
+
 </html>
