--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
 
       <div class="btn">
         <a href="yes.html">Yes</a>
-        <a href="no1.html">
+        <a href="no1.html">No</a>
       </div>
     </div>
   </body>
 
 </html>
+
