--- a/no1.html
+++ b/no1.html
@@ -28,9 +28,10 @@
       <p>itni jaldi nahi matt bolo😥</p>
 
       <div class="btn">
-        <a href='/yes.html'>Yes</a>
-        <a href='/no2.html'>No</a>
+        <a href="yes.html">Yes</a>
+        <a href="no2.html">No</a>
       </div>
     </div>
   </body>
+
 </html>
