--- a/no2.html
+++ b/no2.html
@@ -33,9 +33,10 @@
       <p>kyu aisa kar rahe ho 😣</p>
 
       <div class="btn">
-        <a href='/yes.html'>Yes</a>
-        <a href='/no3.html'>No</a>
+        <a href="yes.html">Yes</a>
+        <a href="no3.html">No</a>
       </div>
     </div>
   </body>
+
 </html>
