--- a/no3.html
+++ b/no3.html
@@ -34,11 +34,12 @@
       <p>bhut glt baat hai yaar😭</p>
 
       <div class="btn">
-        <a href='/yes.html'>Yes</a>
+        <a href="yes.html">Yes</a>
         <a href="#" id="random-move">No</a>
       </div>
     </div>
 
     <script src="./script.js"></script>
   </body>
+
 </html>
