--- a/no1.html
+++ b/no1.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ask Her Out</title>
+    <title>Baby Please 😭👉👈</title>
 
     <link rel="stylesheet" href="./style.css" />
   </head>
@@ -35,3 +35,4 @@
   </body>
 
 </html>
+
